--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -626,27 +626,33 @@
     "paste_link": "Ссылка на площадку",
     "category": {
       "title": "Выберите категорию площадки",
-      "text": ""
+      "default_value": "Не выбрано",
+      "text": "аа"
     },
     "languages": {
       "title": "Выберите язык",
-      "text": ""
+      "default_value": "Не выбрано",
+      "text": "аа"
     },
     "region": {
       "title": "Выберите регион",
-      "text": ""
+      "default_value": "Не выбрано",
+      "text": "аа"
     },
     "sex": {
       "title": "Соотношение полов вашей аудитории, %",
-      "text": ""
+      "default_value": "Не выбрано",
+      "text": "аа"
     },
     "age": {
       "title": "Выберите возраст вашей аудитории",
-      "text": ""
+      "default_value": "Не выбрано",
+      "text": "аа"
     },
     "description": {
       "title": "Описание вашей площадки",
-      "text": ""
+      "default_value": "Не выбрано",
+      "text": "аа"
     },
     "price": {
       "title": "Выбери формат размещения и  укажите цену",
@@ -850,23 +856,28 @@
 
     "category": {
       "title": "Категория бизнеса:",
-      "default_value": "sample"
+      "text": "",
+      "default_value": "Не выбрано"
     },
     "age": {
       "title": "Возраст:",
-      "default_value": "sample"
+      "text": "",
+      "default_value": "Не выбрано"
     },
     "sex": {
       "title": "Пол:",
-      "default_value": "sample"
+      "text": "",
+      "default_value": "Не выбрано"
     },
     "region": {
       "title": "Регион:",
-      "default_value": "sample"
+      "text": "",
+      "default_value": "Не выбрано"
     },
     "languages": {
       "title": "Язык:",
-      "default_value": "sample"
+      "text": "",
+      "default_value": "Не выбрано"
     },
     "recomendation": "Рекомендованные ЦА",
 
@@ -983,6 +994,41 @@
           "default_value": "sample link"
         },
         "add_button": "Добавить кнопку"
+      },
+
+      "add_files": {
+        "add_files": "Загрузка файлов",
+        "types": {
+          "file": "Загрузить файл",
+          "mediafile": "Загрузить медиафайл"
+        },
+        "mediafile": {
+          "formats": {
+            "title": "Поддерживаемые форматы:",
+            "text": "JPG/JPEG, PNG,MP4, MOV, AVI, WMV, WEBM"
+          },
+          "size": {
+            "title": "Максимальный размер:",
+            "text": "50 мб"
+          }
+        },
+        "file": {
+          "file": "Вы можете загрузить лишь один файл, например техническое задание для блогера, если ваш файл больше разрешенного размера, вы можете загрузить его на гугл или яндекс диск и передать ссылку в комментарии для блогера",
+          "formats": {
+            "title": "Поддерживаемые форматы:",
+            "text": "DOC, DOCX, ZIP, PDF, XLS, XLSX, TXT"
+          },
+          "size": {
+            "title": "Максимальный размер:",
+            "text": "50 мб"
+          }
+        }
+      },
+
+      "add":{
+        "text": "Перетащите сюда файл",
+        "span": "или",
+        "choose": "Выберите файл"
       }
     },
 
