feat: legalService, fix subFilter, fix authAPI logic

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -686,8 +686,8 @@
       "individual": "ИП"
     },
     "subtypes": {
-      "account": "Расчетный счет",
-      "card": "Транзитный счёт (Humo|UzCard)"
+      "account": "Расчетный счёт",
+      "card": "Транзитный счёт"
     },
     "basic_info": {
       "basic_info": "Общие данные",
@@ -911,12 +911,16 @@
     "topup": {
       "title": "Пополнение баланса",
       "offer": "Заявка на пополнение баланса",
-      "amount": "Сумма пополнения"
+      "amount": "Сумма пополнения",
+      "required": "Введите сумму",
+      "placeholder": "Введите сумму"
     },
     "withdraw": {
       "title": "Вывод средств",
       "offer": "Заявка на вывод средств",
-      "amount": "Сумма вывода"
+      "amount": "Сумма вывода",
+      "required": "Введите сумму",
+      "placeholder": "Введите сумму"
     },
     "types": {
       "selfemployed": "Физ. лицо",
@@ -950,9 +954,11 @@
       "text2": "ознакомлен и принимаю их."
     },
 
-    "use_data": "Вы хотите использовать сохраненные данные?",
+    "use_data": "Ваши сохраненные данные:",
     "save_data": "Сохранить данные для дальнейшего использования",
-    "finally": "Итоговая сумма"
+    "finally": "Итоговая сумма",
+    "inn": "ИНН:",
+    "pnfl": "ПИНФЛ:"
   },
 
   "wallet_history": {
@@ -1131,5 +1137,11 @@
   "topup_btn": {
     "replenish": "Пополнить",
     "send": "Отправить"
+  },
+
+  "amount": {
+    "error": {
+      "required": "Введите сумму"
+    }
   }
 }
