fix: remove network/sort Filters -> replaced by select option, add logic to cards change in Catalog/Cart pages

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -880,7 +880,14 @@
     },
     "recomendation": "Рекомендованные ЦА",
 
-    "generation_btn": "Сгенерировать"
+    "generation_btn": "Сгенерировать",
+
+    "current_cart": {
+      "channels": "Каналов",
+      "views": "Охват",
+      "cost": "Сумма",
+      "cart": "В корзину"
+    }
   },
 
   "cart": {
@@ -1067,7 +1074,7 @@
   },
 
   "sorting": {
-    "title": "Сортировака",
+    "title": "Сортировка",
     "date": "По дате",
     "subscribers": "По подписчикам"
   },
