fix: fix styles Calendar, Create Order Cards

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1057,6 +1057,7 @@
     "choose": "Выберите дату",
     "confirm": "Потдвердить",
     "range": "Выбрать диапазон",
+    "date": "Выбрать дату",
     "until": "до"
   },
 
