fix: fix styles Calendar, Create Order Cards 2

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1054,7 +1054,8 @@
   },
 
   "calendar": {
-    "choose": "Выберите дату",
+    "choose_date": "Выберите дату",
+    "choose_time": "Выберите время",
     "confirm": "Потдвердить",
     "range": "Выбрать диапазон",
     "date": "Выбрать дату",
