feat: addChannel logic with rtk queries

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -536,9 +536,10 @@
     "status_filter": {
       "active": "Активные",
       "moderation": "На модерации",
-      "reject": "Отклоненные",
-      "deactivate": "Деактивированные",
-      "ban": "Заблокированные"
+      "moderation_reject": "Отклоненные",
+      "inactive": "Деактивированные",
+      "banned": "Заблокированные",
+      "deleted": "Удаленные"
     },
 
     "no_platform": "На данный момент у вас нет каналов",
@@ -624,6 +625,8 @@
     "channel_info": "Информация о площадке",
     "choose_platform": "Выберите платформу",
     "paste_link": "Ссылка на площадку",
+    "link_requerd": "Введите ссылку на канал",
+    "link_invalid": "Ссылка недействительна",
     "category": {
       "title": "Выберите категорию площадки",
       "default_value": "Не выбрано",
@@ -1106,6 +1109,8 @@
 
   "add_platform_btn": {
     "check": "Проверить",
+    "checked": "Проверено",
+    "checked_error": "Ошибка...",
     "save": "Сохранить",
     "create": "Отправить заявку",
     "accept": "Принять"
