feat: create order

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -920,6 +920,7 @@
 
   "cart": {
     "cart": "Корзина",
+    "empty": "Список пуст...",
 
     "create_post": {
       "title": "Заказ защищён безопасной сделкой",
@@ -1079,7 +1080,8 @@
     },
 
     "payment": {
-      "title": "Оплата заказа"
+      "title": "Оплата заказа",
+      "pay": "Оплатить"
     }
   },
 
@@ -1111,34 +1113,34 @@
     "how_it_works": {
       "title": "Как это работает?",
       "choose_tarif": "Выбрать тариф",
-      "step_1":{
+      "step_1": {
         "title": "От вас",
         "text": [
-          {"text": "Выбрать и оплатить комфортный для вас тариф"},
-          {"text": "Описать ваш проект и пожелания по рекламной кампании"}
-        ] 
+          { "text": "Выбрать и оплатить комфортный для вас тариф" },
+          { "text": "Описать ваш проект и пожелания по рекламной кампании" }
+        ]
       },
-      "step_2":{
+      "step_2": {
         "title": "100% бюджета направлено на размещение, а услуги менеджера - абсолютно бесплатные!",
         "text": [
-          {"text": "Разработаем индивидуальный план размещения"},
-          {"text": "Осуществляем ручной подбор подходящих каналов"},
-          {"text": "Осуществляем контроль за размещением рекламных постов"},
-          {"text": "Анализируем конкурентов и целувую аудиторию"},
-          {"text": "Проводим согласование и запуск проекта"},
-          {"text": "Проводим анализ статистики и оцениваем результат"}
-        ] 
+          { "text": "Разработаем индивидуальный план размещения" },
+          { "text": "Осуществляем ручной подбор подходящих каналов" },
+          { "text": "Осуществляем контроль за размещением рекламных постов" },
+          { "text": "Анализируем конкурентов и целувую аудиторию" },
+          { "text": "Проводим согласование и запуск проекта" },
+          { "text": "Проводим анализ статистики и оцениваем результат" }
+        ]
       },
-      "step_3":{
+      "step_3": {
         "title": "Вы получите",
         "text": [
-          {"text": "Экономия времени и ресурсов рекламной кампании"},
-          {"text": "Экономия времени и ресурсов рекламной кампании"},
-          {"text": "Экономия времени и ресурсов рекламной кампании"},
-          {"text": "Экономия времени и ресурсов рекламной кампании"},
-          {"text": "Экономия времени и ресурсов рекламной кампании"},
-          {"text": "Экономия времени и ресурсов рекламной кампании"}
-        ] 
+          { "text": "Экономия времени и ресурсов рекламной кампании" },
+          { "text": "Экономия времени и ресурсов рекламной кампании" },
+          { "text": "Экономия времени и ресурсов рекламной кампании" },
+          { "text": "Экономия времени и ресурсов рекламной кампании" },
+          { "text": "Экономия времени и ресурсов рекламной кампании" },
+          { "text": "Экономия времени и ресурсов рекламной кампании" }
+        ]
       }
     },
     "customers": {
