--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -20,7 +20,9 @@
 
   "roles": {
     "blogger": "Блогер",
-    "advertiser": "Рекламодатель"
+    "advertiser": "Рекламодатель",
+    "manager": "Менеджер",
+    "administrator": "Администратор"
   },
 
   "profile": {
@@ -482,8 +484,9 @@
         "active": "В работе",
         "develop": "В разработке",
         "agreed": "На согласовании",
-        "complited": "Выполненные"
+        "completed": "Выполненные"
       },
+      "campaign": "Кампания для",
       "channels": "Каналы",
       "views": "Просмотры",
       "tarif": "Тариф",
@@ -500,11 +503,90 @@
     "order_status": {
       "rejected": {
         "title": "Владелец канала отклонил вашу заявку",
+        "title2": "Заказ отменен",
         "text": "Ваши средства вернуться на ваш кошелек в течение 12 часов",
         "text2": "Остаток средств будет возвращен после завершения кампании"
       },
       "completed": {
-        "title": "Ваш заказ выполнен"
+        "title": "Ваш заказ выполнен",
+        "title2": "Заказ выполнен"
+      },
+      "posted": {
+        "title": "Пост размещен",
+        "text": "Проверьте пост на соответствие"
+      },
+      "accepted": {
+        "title": "Заявка принята",
+        "text": "После размещения поста вы получите уведомление от владельца канала"
+      },
+      "moderation": {
+        "title": "На модерации",
+        "text": "Решение по вашей заявки будет принято в течение ",
+        "small": "24 часов"
+      },
+      "waiting": {
+        "title": "Ожидает ответа от владельца канала"
+      },
+      "agreed": {
+        "title": "Канал на согласовании"
+      },
+      "template": {
+        "title": "Черновик"
+      }
+
+    }
+  },
+
+  "orders_manager": {
+    "orders": "Рекламные заказы",
+
+    "no_project": "На данный момент у вас нет проектов",
+
+    "status_filter": {
+      "active": "Активные",
+      "complite": "Выполненные",
+      "new": "Новые заказы",
+      "agreed": "На согласовании"
+    },
+
+    "card": {
+      "status": {
+        "active": "В работе",
+        "agreed": "На согласовании",
+        "completed": "Выполнен"
+      },
+      "channels": "Каналы",
+      "views": "Просмотры",
+      "tarif": "Тариф",
+      "cost": "Бюджет",
+      "rest": "Остаток",
+      "see_more": "Развернуть",
+      "see_less": "Свернуть",
+      "start_btn": "Начать",
+      "run_btn": "Запустить"
+    },
+    "subcard": {
+        "date": "Дата",
+        "accommodation": "Формат размещения",
+        "time": "Время размещения",
+        "price": "Цена",
+        "comment": "Комментарий",
+        "link": "Прикрепленные ссылки",
+        "file": "Прикрепленные файлы", 
+        "download_all": "Скачать все",
+        "send_btn": "Отправить в бот"
+    },
+    
+    "order_status": {
+      "rejected": {
+        "title": "Владелец канала отклонил вашу заявку",
+        "title2": "Заказ отменен",
+        "text": "Ваши средства вернуться на ваш кошелек в течение 12 часов",
+        "text2": "Остаток средств будет возвращен после завершения кампании"
+      },
+      "completed": {
+        "title": "Ваш заказ выполнен",
+        "title2": "Заказ выполнен"
       },
       "posted": {
         "title": "Пост размещен",
@@ -524,6 +606,12 @@
       },
       "agreed": {
         "title": "Канал на согласование"
+      },
+      "comment" : {
+        "title": "Есть комментарий"
+      },
+      "channel_agreed": {
+        "title": "Канал согласован"
       },
       "template": {
         "title": "Черновик"
@@ -1195,9 +1283,12 @@
     "feedback": "Оставить отзыв",
     "accept": "Принять",
     "reject": "Отклонить",
-    "check": "Проверить пост",
-    "see": "Посмотреть пост",
-    "change": "Заменить канал",
+    "checkPost": "Проверить пост",
+    "seePost": "Посмотреть пост",
+    "seeComment": "Посмотреть комментарий",
+    "changeChannel": "Заменить канал",
+    "changePost": "Заменить пост",
+    "seeReport": "Загрузить отчет",
     "continue": "Продолжить"
   },
 
