feat: merge and fix conflicts

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -654,7 +654,7 @@
 
     "menu": {
       "title": "Действия над каналом",
-      "edit" : "Редактировать",
+      "edit": "Редактировать",
       "activate": "Активировать",
       "deactivate": "Деактивировать",
       "delete": "Удалить"
@@ -665,7 +665,6 @@
       "yes": "Да",
       "no": "Нет"
     }
-
   },
 
   "platform_description": {
@@ -734,6 +733,7 @@
 
   "add_platform": {
     "add_platform": "Добавление канала",
+    "edit_platform": "Редактирование канала",
     "identification": "Идентификация канала",
     "channel_info": "Информация о площадке",
     "choose_platform": "Выберите платформу",
