--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -559,6 +559,7 @@
       "cost": "Бюджет",
       "rest": "Остаток",
       "see_more": "Развернуть",
+      "see_task": "Подробное техническое задание",
       "see_less": "Свернуть",
       "start_btn": "Начать",
       "run_btn": "Запустить"
