feat: display post

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1361,7 +1361,7 @@
       "create": {
         "success": "Добавление канала прошло успешно",
         "error": "При добавлении канала произошла ошибка"
-      }, 
+      },
       "edit": {
         "success": "Изменение канала прошло успешно",
         "error": "При изменении канала произошла ошибка"
@@ -1393,10 +1393,10 @@
         "error": "При зачислении средств произошла ошибка"
       }
     },
-    "catalog":{
+    "catalog": {
       "add": {
         "error": "Ошибка при добавлении в корзину"
-      }, 
+      },
       "remove": {
         "error": "Ошибка при удалении из корзины"
       }
@@ -1440,7 +1440,7 @@
     },
     "create_order": {
       "post": {
-        "success": "Пост", 
+        "success": "Пост",
         "error": "Ошибка в создании поста"
       },
       "payment": {
@@ -1453,5 +1453,6 @@
         "error": "Произошла ошибка"
       }
     }
-  }
+  },
+  "url_link": "Введите URL-адрес..."
 }
