feat: add Centrifuge Chat

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1343,6 +1343,9 @@
   },
 
   "toasts": {
+    "websoket": {
+      "new_message": "У вас новое уведомление"
+    },
     "auth": {
       "token": {
         "error": "Произошла ошибка получения токена",
