feat: download and see files from createPostForm

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1119,6 +1119,7 @@
       "result": "Результат",
       "post": "Начните заполнять рекламный пост чтобы увидеть результат",
       "template": "Загрузить шаблон",
+      "comment_to_post": "Комментарий к техническому заданию: ",
 
       "filter": {
         "telegram": "Telegram",
@@ -1147,6 +1148,7 @@
           "mediafile": "Загрузить медиафайл"
         },
         "mediafile": {
+          "max_length": "Максимум 10 медиафайлов",
           "formats": {
             "title": "Поддерживаемые форматы:",
             "text": "JPG/JPEG, PNG,MP4, MOV, AVI, WMV, WEBM"
@@ -1165,7 +1167,8 @@
           "size": {
             "title": "Максимальный размер:",
             "text": "50 мб"
-          }
+          },
+          "post_title": "Файлы, прикрепленные к техническому заданию:"
         }
       },
 
