feat: adaptive main pages (without how it works section)

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -145,7 +145,10 @@
             "stage": "Оплатить отдельно каждому админу размещение без каких либо гарантий средств"
           },
           {
-            "stage": " Следить за размещением поста в каждой площадке отдельно"
+            "stage": "Отправить рекламный пост каждому админу"
+          },
+          {
+            "stage": "Следить за размещением поста в каждой площадке отдельно"
           }
         ]
       },
