--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1310,7 +1310,7 @@
 
   "offer_btn": {
     "see": "К заявкам",
-    "see_link": "Посмотреть",
+    "see_link": "Пост",
     "send_link": "Отправить",
     "reject": "Отклонить",
     "accept": "Принять",
@@ -1450,10 +1450,11 @@
     },
     "create_order": {
       "post": {
-        "success": "Пост",
+        "success": "Пост успешно создан",
         "error": "Ошибка в создании поста"
       },
       "payment": {
+        "success": "Рекламная кампания успешно оплачена и запущена!",
         "error": "Ошибка в оплате заказа"
       },
       "date": {
