feat: adaptive main pages full

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -388,10 +388,11 @@
         "save": "Экономьте время и деньги"
       }
     ],
-
-    "calculate_title": "Рассчитаем доходность канала",
-    "calculate_subtitle": "Укажите тематику вашего канала или блога и количество подписчиков",
-    "calculate_text": "Полученные значения являются предполагаемыми и могут варьироваться от многих других факторов",
+    "calculate": {
+      "title": "Рассчитаем доходность канала",
+      "subtitle": "Укажите тематику вашего канала или блога и количество подписчиков",
+      "text": "Полученные значения являются предполагаемыми и могут варьироваться от многих других факторов"
+    },
 
     "card": {
       "title": "Рассчитай свой доход за месяц",
