feat: start adaptive catalog page

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1015,7 +1015,7 @@
       "channels": "Каналов",
       "views": "Охват",
       "cost": "Сумма",
-      "cart": "В корзину"
+      "cart": "Перейти в корзину"
     }
   },
 
