feat: add main pages animation and not auth sidebar

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -12,6 +12,7 @@
     "catalog": "Каталог площадок",
     "turnkey": "Размещение под ключ",
     "platformOwner": "Владельцу площадки",
+    "advertiser": "Рекламодателю",
     "wallet": "Кошелёк",
     "languages": "",
     "addPlatform": "Добавить канал",
