--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1118,6 +1118,9 @@
       "title": "Создание рекламного поста",
       "text": "Текст рекламного поста...",
       "generation": "AI Генерация",
+      "multi_post": "Уникальный пост",
+      "universal_post": "Универсальный пост",
+      "choose_platform": "Выберите платформу",
       "add_file": "Загрузить файл",
       "comment": "Комментарий блогеру...",
       "result": "Результат",
