--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1121,6 +1121,7 @@
       "multi_post": "Уникальный пост",
       "universal_post": "Универсальный пост",
       "choose_platform": "Выберите платформу",
+      "your_posts": "Ваши посты",
       "add_file": "Загрузить файл",
       "comment": "Комментарий блогеру...",
       "result": "Результат",
