feat: orders features

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -712,7 +712,9 @@
 
     "offer_status": {
       "active": {
-        "title": "Отправьте ссылку на проверку"
+        "title": "Отправьте пост на проверку",
+        "placeholder": "Введите ссылку на пост...",
+        "invalid_url": "Ссылка недействительна"
       },
       "check": {
         "title": "Вы отправили пост на проверку",
@@ -724,7 +726,7 @@
       },
       "cancel": {
         "title": "Вы отменили заказ",
-        "text": "Напоминаем, если часто отменять заказы"
+        "text": "Напоминаем, что частая отмена заказов может привести к деактивации вашей площадки"
       },
       "moderation": {
         "text": "Рекламный заказ был отклонен в связи с несоответствием с условиями рекламодателя. Ожидайте решение администратора"
@@ -1306,7 +1308,14 @@
   "order_btn": {
     "feedback": "Оставить отзыв",
     "accept": "Принять",
-    "reject": "Отклонить",
+    "reject": {
+      "btn_title": "Отклонить",
+      "placeholder": "Опишите причину",
+      "description": {
+        "title": "Мы сожалеем о случившемся и обязательно примем справедливое решение",
+        "subtitle": "Напишите причину отклонения рекламного поста. Заказ будет отправлен на модерацию для принятия решения по случившейся ситуации. Если блогером не были выполнены условия рекламного заказа, средства за рекламный заказ автоматически вернутся на ваш баланс"
+      }
+    },
     "checkPost": "Проверить пост",
     "seePost": "Посмотреть пост",
     "seeComment": "Посмотреть комментарий",
