fix: last changes

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -710,6 +710,11 @@
       "price": "Цена"
     },
 
+    "days": {
+      "day": "дня",
+      "days": "дней"
+    },
+
     "offer_status": {
       "active": {
         "title": "Отправьте пост на проверку",
