--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1196,6 +1196,13 @@
     "payment": {
       "title": "Оплата заказа",
       "pay": "Оплатить"
+    },
+
+    "loading": {
+      "posts": "Отправляем рекламные посты...",
+      "files": "Выгружаем файлы...",
+      "payment": "Проверяем оплату...",
+      "heart": "Осталось совсем чуть-чуть..."
     }
   },
 
@@ -1306,7 +1313,13 @@
   },
 
   "order_btn": {
-    "feedback": "Оставить отзыв",
+    "feedback": {
+      "btn_title": "Оставить отзыв",
+      "description": {
+        "title": "Оставьте отзыв",
+        "subtitle": "Вы поможете стать нам лучше! Опишите пожалуйста проделанную работу, все ли вам понравилось, не было ли недочётов?"
+      }
+    },
     "accept": "Принять",
     "reject": {
       "btn_title": "Отклонить",
@@ -1331,6 +1344,8 @@
     "send_link": "Отправить",
     "reject": "Отклонить",
     "accept": "Принять",
+    "accept_title": "Выберите дату размещения",
+    "accept_date": "Принять заказ",
     "reason": "Посмотреть причину"
   },
 
@@ -1463,6 +1478,10 @@
       "reject_post": {
         "success": "Пост отклонен",
         "error": "При отклонении поста произошла ошибка"
+      },
+      "add_review": {
+        "success": "Отзыв успешно отправлен!",
+        "error": "Произошла ошибка... Пожалуйста, попробуйте позже"
       }
     },
     "create_order": {
