feat: add manager Api and Advertiser Api (manager projects)

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1225,6 +1225,7 @@
     "types": {
       "blogger": "От блогеров",
       "manager": "От менеджеров",
+      "advertiser": "От рекламодателей",
       "administration": "Администрация серсива"
     },
     "campaign": "РК",
