fix: remove filterSlice

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -668,6 +668,11 @@
       "title": "Вы точно хотите удалить канал?",
       "yes": "Да",
       "no": "Нет"
+    },
+    "deactivate_channel": {
+      "title": "Вы точно хотите деактивировать канал?",
+      "yes": "Да",
+      "no": "Нет"
     }
   },
 
@@ -1474,6 +1479,10 @@
         "deactivate": {
           "success": "Канал деактивирован",
           "error": "При деактивации канала произошла ошибка"
+        },
+        "delete": {
+          "success": "Канал удален",
+          "error": "При удалении канала произошла ошибка"
         }
       },
       "accept_offer": {
