feat: add skeleton and motion in wallet history. Rework header

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -44,10 +44,11 @@
 
   "burger_menu": {
     "services": "Сервисы",
+    "navigation": "Навигация",
     "catalog": "Каталог площадок",
     "turnkey": "Размещение под ключ",
     "addPlatform": "Добавить канал",
-    "calculateIncome": "Рассчет доход",
+    "calculateIncome": "Рассчет дохода",
 
     "orders": "Мои Рекламные компании",
 
