--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -182,7 +182,7 @@
     "turnkey_subtitle": "Выберите тариф и персональный менеджер сделает все за вас",
     "turnkey_text": "Услуги менеджера предоставляются в качестве бонуса. Весь бюджет идёт на покупку интеграций в каталоге Vencom",
     "tarifs_list": [
-      { 
+      {
         "type": "base",
         "name": "Начальный",
         "views": "от 60 000 просмотров",
@@ -468,7 +468,7 @@
   },
 
   "orders_advertiser": {
-    "my_campaign": "Мои Рекламные кампании",
+    "my_campaign": "Рекламные кампании",
     "new_project": "Создать проект",
     "start_new_project": "Начать рекламную кампанию",
     "turnkey_project": "Под ключ",
@@ -1345,7 +1345,7 @@
           "text2": " в техническую поддержку"
         }
       }
-    } 
+    }
   },
 
   "channel": {
@@ -1357,7 +1357,7 @@
       "region": "Регион"
     },
     "statistics": {
-      "title" : "Статистика канала",
+      "title": "Статистика канала",
       "orders": "Выполнено заказов",
       "subs": "Подписчики",
       "views": "Просмотр на пост",
@@ -1388,6 +1388,7 @@
   },
 
   "faq": {
+    "page_title": "База знаний",
     "common": {
       "title": "Общие вопросы"
     },
