fix: some design fixes

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -351,12 +351,12 @@
     "how_title": "Как это работает?",
     "how_list": [
       { "stage": "Зарегистрируйтесь в сервисе" },
-      { "stage": "Выберите подходящие площадки в каталоге" },
-      { "stage": "Пополните баланс удобным способом" },
+      { "stage": "Добавьте канал на нашу платформу" },
+      { "stage": "Примите заявку на рекламный заказ" },
       {
-        "stage": "Создайте размещение самостоятельно или сгенерируйте пост с помощью искусственного интеллекта"
+        "stage": "Разместите пост на своём канале в указанное время и получите оплату от рекламодателя"
       },
-      { "stage": "Владелец площадки опубликует пост и пришлет вам на проверку" }
+      { "stage": "Выведите деньги удобным для вас способом" }
     ],
     "why_title": "Почему с нами эффективнее?",
     "accomms_list": [
