fix: createOrder in cart

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1050,7 +1050,8 @@
       "subscribers": "Всего подписчиков",
       "views": "Всего просмотров",
       "commission": "Комиссия сервиса",
-      "finnaly": "Итоговая сумма"
+      "finnaly": "Итоговая сумма",
+      "finnaly_short": "Сумма"
     },
 
     "recomendation": "Рекомендуемые площадки",
