--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -70,6 +70,11 @@
     "base": "База знаний"
   },
 
+  "more_less": {
+    "more": "Больше",
+    "less": "Меньше"
+  },
+
   "main_page_advertiser": {
     "main_img": "mainAdv.png",
     "cta_title": "Рекламные размещения в соцсетях без хлопот",
@@ -1351,6 +1356,9 @@
   },
 
   "channel": {
+    "description": {
+      "button": "Добавить"
+    },
     "parameters": {
       "category": "Категория канала",
       "language": "Язык аудиториии",
