--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -168,11 +168,11 @@
         "stages": [
           { "stage": "Зарегистрируйте аккаунт на платформе" },
           {
-            "stage": "Подберите подходящие плошадки в пару кликов благодаря эффективным алгоритмам подбора или купите запуск под ключ"
+            "stage": "Подберите подходящие плошадки в пару кликов или выберите запуск под ключ"
           },
           { "stage": "Пополните баланс удобным способом" },
           {
-            "stage": "Создайте рекламный пост вручную либо можете сгенерировать все с помощью искусственного интеллекта"
+            "stage": "Загрузите пост либо сгенерируйте все с помощью искусственного интеллекта"
           },
           {
             "stage": "В один клик запустите рекламу сразу во всех выбранных площадках"
@@ -1370,7 +1370,8 @@
         "file": {
           "title": "Добавить файл",
           "text": "Загрузите файл с необходимой информацией для вашего рекламного заказа для более детальной проработки вашего проекта (например, вы можете загрузить техническое задание или медиафайлы)",
-          "value": "Перетащите сюда файл или",
+          "value": "Перетащите сюда файл",
+          "or": "или",
           "button": "Выберите файл",
           "formats": {
             "title": "Поддерживаемые форматы:",
