feat: Change Add platform(not fully finished). Change cards (useEffect removed -> add rtk query merge)

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -761,57 +761,105 @@
   },
 
   "add_platform": {
-    "add_platform": "Добавление канала",
-    "edit_platform": "Редактирование канала",
-    "identification": "Идентификация канала",
-    "channel_info": "Информация о площадке",
-    "choose_platform": "Выберите платформу",
-    "paste_link": "Ссылка на площадку",
-    "link_requerd": "Введите ссылку на канал",
-    "link_invalid": "Ссылка недействительна",
-    "category": {
-      "title": "Выберите категорию площадки",
-      "default_value": "Не выбрано",
-      "text": "аа"
+    "title": {
+      "add": "Добавление канала",
+      "edit": "Редактирование канала"
     },
-    "languages": {
-      "title": "Выберите язык",
-      "default_value": "Не выбрано",
-      "text": "аа"
+    "chevron": {
+      "step": "этап",
+      "identification": "Идентификация площадки",
+      "description": "Описание площадки",
+      "accept": "Подтверждение"
+    }, 
+    "identification": {
+      "info": {
+        "title": "Выберите платформу",
+        "text": "aa"
+      },
+      "link": {
+        "title": "Укажите ссылку",
+        "text": "aa",
+        "requerd": "Введите ссылку на канал",
+        "invalid": "Ссылка недействительна"
+      }
     },
-    "region": {
-      "title": "Выберите регион",
-      "default_value": "Не выбрано",
-      "text": "аа"
-    },
-    "sex": {
-      "title": "Соотношение полов вашей аудитории, %",
-      "default_value": "Не выбрано",
-      "text": "аа"
-    },
-    "age": {
-      "title": "Выберите возраст вашей аудитории",
-      "default_value": "Не выбрано",
-      "text": "аа"
-    },
+
     "description": {
-      "title": "Описание вашей площадки",
-      "default_value": "Не выбрано",
-      "text": "аа"
+      "category": {
+        "title": "Выберите категорию площадки",
+        "default_value": "Не выбрано",
+        "text": "аа"
+      },
+      "languages": {
+        "title": "Выберите язык",
+        "default_value": "Не выбрано",
+        "text": "аа"
+      },
+      "region": {
+        "title": "Выберите регион",
+        "default_value": "Не выбрано",
+        "text": "аа"
+      },
+      "sex": {
+        "title": "Соотношение полов вашей аудитории, %",
+        "default_value": "Не выбрано",
+        "text": "аа"
+      },
+      "age": {
+        "title": "Выберите возраст вашей аудитории",
+        "default_value": "Не выбрано",
+        "text": "аа"
+      },
+      "description": {
+        "title": "Описание вашей площадки",
+        "default_value": "Опишите особенности, которые будут выделять ваш канал среди других.",
+        "text": "аа"
+      },
+      "price": {
+        "title": "Выбери формат размещения и  укажите цену",
+        "info": "О различиях в форматах размещения и назначение стоимости вы можете узнать в инструкции",
+        "text": "aa",
+        "default": "Укажите цену"
+      },
+      "symbol": {
+        "title": "Количество символов в посту",
+        "text": "aa"
+      },
+      "choosed": "Выбрано",
+      "from": "из"
     },
-    "price": {
-      "title": "Выбери формат размещения и  укажите цену",
-      "info": "О различиях в форматах размещения и назначение стоимости вы можете узнать в инструкции",
-      "text": "",
-      "default": "Укажите цену"
+    "accept": {
+      "platform": {
+        "title": "Платформа"
+      },
+      "link": {
+        "title": "Ссылка"
+      },
+      "category": {
+        "title": "Категория"
+      },
+      "languages": {
+        "title": "Язык"
+      },
+      "region": {
+        "title": "Регион"
+      },
+      "sex": {
+        "title": "Соотношение полов"
+      },
+      "age": {
+        "title": "Возраст"
+      },
+      "description": {
+        "title": "Описание"
+      },
+      "price": {
+        "title": "Формат размещения и цена"
+      },
+      "symbol": {
+        "title": "Количество символов"
+      }
     },
-    "symbol": {
-      "title": "Количество символов в посту",
-      "text": ""
-    },
-    "choosed": "Выбрано",
-    "from": "из",
-    "default_input": "Опишите особенности, которые будут выделять ваш канал среди других. ",
 
     "create": {
       "send": "Ваша заявка отправлена!",
@@ -1451,7 +1499,12 @@
     "checked_error": "Ошибка...",
     "save": "Сохранить",
     "create": "Отправить заявку",
-    "accept": "Принять"
+    "accept": "Принять",
+
+    "next": "Далее",
+    "prev": "Назад",
+    "back": "Вернуться", 
+    "send": "Отправить"
   },
 
   "order_btn": {
