feat: merge branches

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -7,6 +7,11 @@
   "btn_add_platform": "Добавить канал",
   "btn_add_profile": "Добавить",
   "btn_start_adv": "Запустить рекламу",
+  "registration_alert": {
+    "title": "Вы не авторизованы...",
+    "description": "Чтобы продолжить пройдите регистрацию или войдите в аккаунт",
+    "close": "Закрыть"
+  },
 
   "pages": {
     "catalog": "Каталог площадок",
@@ -770,7 +775,7 @@
       "identification": "Идентификация площадки",
       "description": "Описание площадки",
       "accept": "Подтверждение"
-    }, 
+    },
     "identification": {
       "info": {
         "title": "Выберите платформу",
@@ -1504,7 +1509,7 @@
 
     "next": "Далее",
     "prev": "Назад",
-    "back": "Вернуться", 
+    "back": "Вернуться",
     "send": "Отправить"
   },
 
