feat: alert-registration and design fixes

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2,15 +2,18 @@
   "registration": "Регистрация",
   "login": "Войти",
   "logout": "Выход",
+  "logout_title": "Вы уверены что хотите выйти из аккаунта?",
+  "logout_description": "Все ваши данные будут сохранены, вы сможете вернуться к ним если повторно авторизуетесь на платформе",
   "buy": "Купить",
   "btn_catalog": "Каталог площадок",
   "btn_add_platform": "Добавить канал",
   "btn_add_profile": "Добавить",
   "btn_start_adv": "Запустить рекламу",
   "registration_alert": {
-    "title": "Вы не авторизованы...",
-    "description": "Чтобы продолжить пройдите регистрацию или войдите в аккаунт",
-    "close": "Закрыть"
+    "title": "Вы не авторизованы",
+    "description": "Необходимо быть авторизованным пользователем, чтобы получить доступ к этой функции",
+    "close": "Скрыть",
+    "call_to_action": "Получите доступ ко всем возможностям нашей платформы: создавайте, сохраняйте, и делитесь своим контентом, получайте эксклюзивные предложения и многое другое!"
   },
 
   "pages": {
