feat: rework Add Platform Page

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -806,17 +806,17 @@
         "text": "аа"
       },
       "sex": {
-        "title": "Соотношение полов вашей аудитории, %",
+        "title": "Соотношение полов, %",
         "default_value": "Не выбрано",
         "text": "аа"
       },
       "age": {
-        "title": "Выберите возраст вашей аудитории",
+        "title": "Выберите возраст аудитории",
         "default_value": "Не выбрано",
         "text": "аа"
       },
       "description": {
-        "title": "Описание вашей площадки",
+        "title": "Описание площадки",
         "default_value": "Опишите особенности, которые будут выделять ваш канал среди других.",
         "text": "аа"
       },
@@ -834,6 +834,7 @@
       "from": "из"
     },
     "accept": {
+      "title": "Дорогой пользователь,<br/> проверьте данные перед подтверждением",
       "platform": {
         "title": "Платформа"
       },
