feat: role switcher and some fixes

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -13,7 +13,7 @@
     "title": "Вы не авторизованы",
     "description": "Необходимо быть авторизованным пользователем, чтобы получить доступ к этой функции",
     "close": "Скрыть",
-    "call_to_action": "Получите доступ ко всем возможностям нашей платформы: создавайте, сохраняйте, и делитесь своим контентом, получайте эксклюзивные предложения и многое другое!"
+    "call_to_action": "Получите доступ ко всем возможностям платформы: создавайте, сохраняйте, и делитесь своим контентом, получайте эксклюзивные предложения и многое другое!"
   },
 
   "pages": {
@@ -315,7 +315,7 @@
 
   "main_page_blogger": {
     "main_img": "mainBlogger.png",
-    "cta_title": "Добавь канал сейчас и получи заказ.",
+    "cta_title": "Добавь канал сейчас и получи заказ",
     "cta_subtitle": "Открой канал для заказов. Просто. Быстро. Доходно.",
     "cta_list": [
       {
