fix: change subbar

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1175,6 +1175,7 @@
     },
 
     "use_data": "Ваши сохраненные данные:",
+    "empty_data": "У вас нет сохранненых данных", 
     "save_data": "Сохранить данные для дальнейшего использования",
     "finally": "Итоговая сумма",
     "inn": "ИНН:",
