fix: cache merge

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1039,7 +1039,8 @@
   },
 
   "platform": {
-    "cross": "Совпадение"
+    "cross": "Совпадение",
+    "match_description": "Процент совпадения показывает насколько эта площадка подходит под выбранные параметры поиска"
   },
   "catalog": {
     "catalog": "Каталог площадок",
@@ -1175,7 +1176,7 @@
     },
 
     "use_data": "Ваши сохраненные данные:",
-    "empty_data": "У вас нет сохранненых данных", 
+    "empty_data": "У вас нет сохранненых данных",
     "save_data": "Сохранить данные для дальнейшего использования",
     "finally": "Итоговая сумма",
     "inn": "ИНН:",
