feat: mychannels page adaptive

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -6,7 +6,7 @@
   "logout_description": "Все ваши данные будут сохранены, вы сможете вернуться к ним если повторно авторизуетесь на платформе",
   "buy": "Купить",
   "btn_catalog": "Каталог площадок",
-  "btn_add_platform": "Добавить канал",
+  "btn_add_platform": "Добавить площадку",
   "btn_add_profile": "Добавить",
   "btn_start_adv": "Запустить рекламу",
   "registration_alert": {
@@ -655,8 +655,9 @@
       "banned": "Заблокированные",
       "deleted": "Удаленные"
     },
+    "created": "Дата",
 
-    "no_platform": "На данный момент у вас нет каналов",
+    "no_platform": "На данный момент у вас нет площадок",
     "no_banned": "У вас нет заблокированных каналов",
 
     "offers_count": "Новые",
@@ -673,9 +674,7 @@
         "deactivate": "Деактивирован",
         "ban": "Заблокирован"
       },
-
-      "see_more": "Развернуть",
-      "see_less": "Свернуть"
+      "new": "Новые"
     },
 
     "menu": {
@@ -704,7 +703,7 @@
     "age": "Возраст аудитории",
     "sex": "Соотношение полов",
     "region": "Регион",
-    "edit_btn": "Pедактировать",
+    "edit_btn": "Изменить",
     "okey_btn": "Понятно"
   },
 
@@ -1561,18 +1560,22 @@
     "accept": "Принять",
     "accept_title": "Выберите дату размещения",
     "accept_date": "Принять заказ",
-    "reason": "Посмотреть причину"
+    "reason": "Причина"
   },
 
   "platform_btn": {
     "description": "Описание канала",
     "calendar": "Календарь",
     "reviews": "Отзывы",
-    "reason": "Посмотреть причину",
+    "reason": {
+      "btn": "Причина",
+      "okey_btn": "Понятно",
+      "title": "Причина отклонения/бана"
+    },
     "offer": "К заявкам",
     "repeat": "Повторить заявку",
     "activate": "Активировать",
-    "support": "Техническая поддержка"
+    "support": "Тех. поддержка"
   },
 
   "cart_btn": {
