--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -484,14 +484,14 @@
   },
 
   "orders_advertiser": {
-    "my_campaign": "Рекламные кампании",
+    "my_campaign": "Мои рекламные кампании",
     "new_project": "Создать проект",
     "start_new_project": "Начать рекламную кампанию",
     "turnkey_project": "Под ключ",
     "start_turnkey_project": "Запустить рекламу под ключ",
     "or": "Или",
     "no_project": "На данный момент у вас нет проектов",
-    "no_template": "Сохраняйте свои Рекламные кампании и продолжайте их в любой удобный момент",
+    "no_template": "Сохраняйте свои Рекламные кампании и продолжайте их в любой момент",
     "type_filter": {
       "my_project": "Мои проекты",
       "manager_project": "Проекты с менеджерами",
@@ -515,8 +515,10 @@
       "views": "Просмотры",
       "tarif": "Тариф",
       "cost": "Бюджет",
+      "remainder": "Остаток",
       "see_more": "Развернуть",
-      "see_less": "Свернуть"
+      "see_less": "Свернуть",
+      "request_approve": "Ваша кампания ожидает подтверждения"
     },
     "subcard": {
       "date": "Дата",
@@ -1314,6 +1316,10 @@
 
   "chat": {
     "my_messages": "Мои сообщения",
+    "role": {
+      "blogger": "Чат с блоггером",
+      "manager": "Чат с менеджером"
+    },
     "types": {
       "blogger": "От блогеров",
       "manager": "От менеджеров",
